input styles reset

--- a/styles/baseline_grid_typography.css
+++ b/styles/baseline_grid_typography.css
@@ -1,48 +1,48 @@
 h1 {
 	line-height: var(--baseline_line-height-2x);
-	margin-block-start: calc((var(--baseline_line-height-2x) - 1cap) * 0.5);
-	margin-block-end: calc((var(--baseline_line-height-2x) - 1cap) * -0.5);
+	/* margin-block-start: calc((var(--baseline_line-height-2x) - 1cap) * 0.5);
+	margin-block-end: calc((var(--baseline_line-height-2x) - 1cap) * -0.5); */
 }
 
 h2 {
 	line-height: var(--baseline_line-height-2x);
-	margin-block-start: calc((var(--baseline_line-height-2x) - 1cap) * 0.5);
-	margin-block-end: calc((var(--baseline_line-height-2x) - 1cap) * -0.5);
+	/* margin-block-start: calc((var(--baseline_line-height-2x) - 1cap) * 0.5);
+	margin-block-end: calc((var(--baseline_line-height-2x) - 1cap) * -0.5); */
 }
 
 h3 {
 	line-height: var(--baseline_line-height-2x);
-	margin-block-start: calc((var(--baseline_line-height-2x) - 1cap) * 0.5);
-	margin-block-end: calc((var(--baseline_line-height-2x) - 1cap) * -0.5);
+	/* margin-block-start: calc((var(--baseline_line-height-2x) - 1cap) * 0.5);
+	margin-block-end: calc((var(--baseline_line-height-2x) - 1cap) * -0.5); */
 }
 
 h4 {
-	line-height: var(--line-height);
-	margin-block-start: calc((var(--line-height) - 1cap) * 0.5);
-	margin-block-end: calc((var(--line-height) - 1cap) * -0.5);
+	line-height: var(--baseline_line-height);
+	/* margin-block-start: calc((var(--baseline_line-height) - 1cap) * 0.5);
+	margin-block-end: calc((var(--baseline_line-height) - 1cap) * -0.5); */
 }
 
 h5 {
-	line-height: var(--line-height);
-	margin-block-start: calc((var(--line-height) - 1cap) * 0.5);
-	margin-block-end: calc((var(--line-height) - 1cap) * -0.5);
+	line-height: var(--baseline_line-height);
+	/* margin-block-start: calc((var(--baseline_line-height) - 1cap) * 0.5);
+	margin-block-end: calc((var(--baseline_line-height) - 1cap) * -0.5); */
 }
 
 h6 {
-	line-height: var(--line-height);
-	margin-block-start: calc((var(--line-height) - 1cap) * 0.5);
-	margin-block-end: calc((var(--line-height) - 1cap) * -0.5);
+	line-height: var(--baseline_line-height);
+	/* margin-block-start: calc((var(--baseline_line-height) - 1cap) * 0.5);
+	margin-block-end: calc((var(--baseline_line-height) - 1cap) * -0.5); */
 }
 
 p {
-	margin-block-start: calc((var(--line-height) - 1cap) * 0.5);
-	margin-block-end: calc((var(--line-height) - 1cap) * -0.5);
+	/* margin-block-start: calc((var(--baseline_line-height) - 1cap) * 0.5);
+	margin-block-end: calc((var(--baseline_line-height) - 1cap) * -0.5); */
 }
 
 
 /* places for fonts and line heights */
 input[type=text], input[type=password], input[type=email] {
-	line-height: var(--line-height);
+	line-height: var(--baseline_line-height);
 	block-size: 2rem;
 	font-size: 1rem;
 
@@ -68,7 +68,7 @@ input[type=date] {
 }
 
 input[type=file] {
-	line-height: var(--line-height);
+	line-height: var(--baseline_line-height);
 	font-size: 1rem;
 	
 	margin-block-start: calc((1em - 1cap));
