--- a/styles/button.css
+++ b/styles/button.css
@@ -1,48 +1,18 @@
-button, input[type=button] {
+/* does css nesting provide a more concise sytnax for states? */
+:is(button, input[type=button]) {
+	/* put general properties here */
 	appearance: none;
-	background-color: var(--action_bg-0);
+	background: var(--action_bg-1);
+	font: var(--button_font);
 	border: var(--button_border);
-	color: #000000;
-	padding-inline: 1rem;
-	padding-block: 0.4rem;
-	font-family: var(--input-font-family);
-	font-size: 1rem;
-	font-weight: 700;
-	cursor: pointer;
-	border-radius: var(--button_border-radius);
+
+	&:hover {}
+	&:focus {}
+	&:active {}
+	&:disabled {}
 }
 
-button:not([disabled]):active, input[type=button]:not([disabled]):active {
-	background-color: rgb(29, 29, 29);
-	color: white;
-}
 
-button:focus, input[type=button]:focus {
-	background-color: #efefef;
-}
+/* file selector button */
 
-button:disabled, input[type=button]:disabled {
-	border: 2px solid lightgray;
-	color: lightgray;
-	cursor: not-allowed;
-}
-
-/* submit button */
-button[type=reset], input[type=reset] {
-	background-color: var(--action_bg-0);
-	border: var(--button_border);	padding-inline: 1rem;
-	padding-block: 0.5rem;
-	border-radius: var(--button_border-radius);
-}
-
-button[type=submit], input[type=submit]  {
-	appearance: none;
-	background-color: var(--action_bg-0);
-	border: var(--button_border);
-	font-size: 1rem;
-	padding-inline: 1rem;
-	letter-spacing: 0.025em;
-	padding-block: 0.5rem;
-	text-transform: capitalize;
-}
-
+/* color */
