--- a/styles/file_input.css
+++ b/styles/file_input.css
@@ -1,30 +1,21 @@
 input[type=file] {
 	appearance: none;
 	position:relative;
-	display: inline-block;
 	cursor: pointer;
+	font: var(--font);
+	color: var(--color);
 	/* doesn't make sense yet */
 	margin: -4px;
 	padding: 4px;
-	border-radius: var(--button_border-radius);
-	color: var(--color);
 }
-
-input[type=file]:focus, input[type=file]:hover {
-	outline: none;
-}
-
 
 ::file-selector-button  {
-	background-color: var(--action_bg-0);
+	background-color: var(--action_bg-1);
+	font: var(--button_font);
 	border: var(--button_border);
-	font-size: 1rem;
-	padding-inline: 1rem;
-	letter-spacing: 0.025em;
-	padding-block: 0.5rem;
 }
 
-:focus-within::file-selector-button, :focus::file-selector-button {
+/* :focus-within::file-selector-button, :focus::file-selector-button {
 	outline: var(--outline);
 	outline-offset: 0px;
 }
@@ -32,10 +23,11 @@ input[type=file]:focus, input[type=file]:hover {
 :hover::file-selector-button, :hover::file-selector-button {
 	outline: var(--outline);
 	outline-offset: 0px;
-}
+} */
 
 /* input[type="file"]:focus-within::file-selector-button,
 input[type="file"]:focus::file-selector-button {
   outline: 2px solid #0964b0;
   outline-offset: 2px;
 } */
+ 
