--- a/styles/mod.css
+++ b/styles/mod.css
@@ -2,21 +2,22 @@
 @import "../styles/debug.css";
 
 /* Spacing, grids, typography */
-@import "../styles/root.css";
 @import "../styles/baseboard.css";
+@import "../styles/root.css";
 @import "../styles/typography.css";
 
 /* Components */
-@import "../styles/input.css";
 @import "../styles/button.css";
 @import "../styles/checkbox.css";
 @import "../styles/radio.css";
 @import "../styles/switch.css";
-@import "../styles/text.css";
+@import "../styles/text_input.css";
+@import "../styles/number_input.css";
+@import "../styles/color_input.css";
+@import "../styles/file_input.css";
 @import "../styles/textarea.css";
 @import "../styles/select.css";
-@import "../styles/file_input.css";
 
 /* Browser prefixes awaiting standardization / deprecation */
 @import "../styles/webkit.css";
-@import "../styles/firefox.css";
+@import "../styles/mozilla.css";
