--- a/styles/radio.css
+++ b/styles/radio.css
@@ -6,12 +6,14 @@ input[type=radio] {
 	cursor: pointer;
 	background-color: var(--action_bg-0);
 	border: var(--button_border);
-}
 
-input[type=radio]:disabled {
-	cursor: not-allowed;
-}
-
-input[type=radio]:checked {
-	background-color: darkgray;
+	&:hover {}
+	&:focus {}
+	&:active {}
+	&:checked {
+		background-color: darkgray;
+	}
+	&:disabled {
+		cursor: not-allowed;
+	}
 }
