--- a/styles/typography.css
+++ b/styles/typography.css
@@ -1,54 +1,36 @@
 :root {
-	line-height: var(--line-height);
-	font-family: var(--font-family);
+	font: var(--font);
 	color: var(--color);
 }
 
-p {
-	font-size: var(--font-size);
-	max-inline-size: 80ch;
-}
-
 h1 {
-	line-height: var(--h1_font-size);
-	font-size: var(--h1_font-size);
-	font-weight: 700;
-	font-family: var(--header_font-family);
+	font: var(--h1_font);
+	color: var(--h1_color);
 }
 
 h2 {
-	line-height: var(--h2_font-size);
-	font-size: var(--h2_font-size);
-	font-weight: 700;
-	font-family: var(--header_font-family);
+	font: var(--h2_font);
+	color: var(--h2_color);
 }
 
 h3 {
-	line-height: var(--h3_font-size);
-	font-size: var(--h3_font-size);
-	font-weight: 700;
-	font-family: var(--header_font-family);
+	font: var(--h3_font);
+	color: var(--h3_color);
 }
 
 h4 {
-	line-height: var(--h4_font-size);
-	font-size: var(--h4_font-size);
-	font-weight: 700;
-	font-family: var(--sub-header_font-family);
+	font: var(--h4_font);
+	color: var(--h4_color);
 }
 
 h5 {
-	line-height: var(--h5_font-size);
-	font-size: var(--h5_font-size);
-	font-weight: 700;
-	font-family: var(--sub-header_font-family);
+	font: var(--h5_font);
+	color: var(--h5_color);
 }
 
 h6 {
-	line-height: var(--h6_font-size);
-	font-size: var(--h6_font-size);
-	font-weight: 700;
-	font-family: var(--sub-header_font-family);
+	font: var(--h6_font);
+	color: var(--h6_color);
 }
 
 ::selection {
