start with css only (#6)
* organize for sanity

* added css custom properties for font-size and line-height

* typography uses properties

* input styles reset

* nested selectors

--- a/styles/checkbox.css
+++ b/styles/checkbox.css
@@ -1,21 +1,19 @@
-input[type=checkbox] {
+:is(input[type=checkbox]) {
 	appearance: none;
-	/* background-color: var(--interactable-0); */
 	inline-size: 1.25rem;
 	block-size: 1.25rem;
-	border: var(--border);
-	border-radius: var(--border-radius);
+	background-color: var(--action_bg-0);
+	border: none;
+	border: var(--button_border);
 	cursor: pointer;
-}
 
-input[type=checkbox]:disabled {
-	cursor: not-allowed;
-}
-
-input[type=checkbox]:active {
-	background-color: black;
-}
-
-input[type=checkbox]:checked {
-	background-color: darkgray;
+	&:hover {}
+	&:focus {}
+	&:active {}
+	&:checked {
+		background-color: darkgray;
+	}
+	&:disabled {
+		cursor: not-allowed;
+	}
 }
