--- a/styles/typography.css
+++ b/styles/typography.css
@@ -1,50 +1,39 @@
 :root {
-	line-height: var(--line-height);
-	font-family: var(--font-family);
-	letter-spacing: var(--letter-spacing);
+	font: var(--font);
 	color: var(--color);
 }
 
-body {
-	background-color: var(--background-color);
-}
-
-p {
-	font-size: 1rem;
-	max-inline-size: 80ch;
-}
-
 h1 {
-	line-height: 4rem;
-	font-size: 4rem;
-	font-weight: 700;
+	font: var(--h1_font);
+	color: var(--h1_color);
 }
 
 h2 {
-	line-height: 3rem;
-	font-size: 3rem;
-	font-weight: 700;
+	font: var(--h2_font);
+	color: var(--h2_color);
 }
 
 h3 {
-	line-height: 3rem;
-	font-size: 2.25rem;
-	font-weight: 700;
-
+	font: var(--h3_font);
+	color: var(--h3_color);
 }
 
 h4 {
-	font-size: 1.75rem;
-	font-weight: 700;
-
+	font: var(--h4_font);
+	color: var(--h4_color);
 }
 
 h5 {
-	font-size: 1.25rem;
-	font-weight: 700;
+	font: var(--h5_font);
+	color: var(--h5_color);
 }
 
 h6 {
-	font-size: 1rem;
-	font-weight: 700;
+	font: var(--h6_font);
+	color: var(--h6_color);
+}
+
+::selection {
+	background-color: var(--selection_bg-color);
+	color: var(--selection_color);
 }
