--- a/styles/baseboard.css
+++ b/styles/baseboard.css
@@ -1,4 +1,5 @@
 blockquote,
+button,
 dialog,
 fieldset,
 input,
@@ -57,29 +58,6 @@ summary {
 	list-style-type: none;
 }
 
-
-/* additions */
 body {
 	min-block-size: 100dvh;
-}
-
-
-input:hover:not(:disabled) {
-	outline: var(--outline);
-}
-input:focus {
-	outline: var(--outline);
-	outline-offset: 0;
-}
-::selection {
-	background-color: cornflowerblue;
-}
-
-::-webkit-calendar-picker-indicator {
-	background-color: white;
-	border-radius: 4px;
-}
-
-:disabled {
-	cursor: not-allowed;
 }
