--- a/styles/radio.css
+++ b/styles/radio.css
@@ -1,17 +1,19 @@
 input[type=radio] {
 	appearance: none;
 	inline-size: 1.25rem;
-	/* background-color: var(--interactable-0); */
 	block-size: 1.25rem;
-	border: var(--border);
 	border-radius: 50%;
 	cursor: pointer;
-}
+	background-color: var(--action_bg-0);
+	border: var(--button_border);
 
-input[type=radio]:disabled {
-	cursor: not-allowed;
-}
-
-input[type=radio]:checked {
-	background-color: darkgray;
+	&:hover {}
+	&:focus {}
+	&:active {}
+	&:checked {
+		background-color: darkgray;
+	}
+	&:disabled {
+		cursor: not-allowed;
+	}
 }
